<LinearLayout
    android:id="@+id/main_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="on1y.example.org.on1y.MainActivity$PlaceholderFragment"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/now_viewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/viewing_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_title"
            android:textStyle="bold"
            android:typeface="serif"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/main_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@raw/schwartzreviewpreview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_author"/>
        <!-- TODO: clicking here should take me to their channel/page/whatever -->
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Click on image to watch."
            android:layout_gravity="right"
            android:paddingLeft="80dp"/>
        <!-- TODO:make this go all the way to the right -->
    </LinearLayout>

    <TextView
        android:id="@+id/main_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:lineSpacingMultiplier="1.5"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/main_summary"
        android:textColor="#000000"
        android:textSize="20sp"
        android:paddingTop="16dp"/>
</LinearLayout>
