<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/business_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="on1y.example.org.on1y.MainActivity$PlaceholderFragment"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/business_viewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/business_viewing_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/business_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business_title"
            android:textStyle="bold"
            android:typeface="serif"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@raw/business"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/business_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@raw/businesspreview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/business_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_author"/>
        <!-- TODO: clicking here should take me to their channel/page/whatever -->
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Click on image to watch."
            android:layout_gravity="right"
            android:paddingLeft="30dp"/>
        <!-- TODO:make this go all the way to the right -->
    </LinearLayout>

    <TextView
        android:id="@+id/business_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:lineSpacingMultiplier="1"
        android:paddingLeft="27dp"
        android:paddingRight="27dp"
        android:text="@string/business_summary"
        android:textColor="#000000"
        android:textSize="19sp"
        android:paddingTop="10dp"/>
</LinearLayout>
