<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_fragment_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="on1y.example.org.on1y.MainActivity$PlaceholderFragment"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/book_viewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/book_viewing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_title"
            android:textStyle="bold"
            android:typeface="serif"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@raw/booklogo"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/book_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:paddingTop="30dp"
        android:src="@raw/bookpreview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"/>
        <!-- TODO: clicking here should take me to their channel/page/whatever -->
       <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Click on image to view on Google Play."
        android:layout_gravity="right"
        android:paddingLeft="20dp"/>
        <!-- TODO:make this go all the way to the right -->
    </LinearLayout>

    <TextView
        android:id="@+id/book_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:lineSpacingMultiplier="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/book_summary"
        android:textColor="#000000"
        android:textSize="17sp"
        android:paddingTop="7dp"/>
</LinearLayout>
</ScrollView>